webapp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    #app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    #app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/tokinori_shimodaira_ibm-sample-app.git
  labels:
    app: team-taurus-frontend1
    app.kubernetes.io/instance: team-taurus-frontend1
    app.kubernetes.io/name: team-taurus-frontend1
    app.openshift.io/runtime: js
  name: team-taurus-frontend1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: team-taurus-frontend1
      app.kubernetes.io/name: team-taurus-frontend1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: team-taurus-frontend1
        app.kubernetes.io/name: team-taurus-frontend1
    spec:
      containers:
        - env:
          - name: INGRESS_HOST
          - name: PROTOCOLS
          - name: LOG_LEVEL
            value: debug
          image: quay.io/tokinori_shimodaira_ibm/team-taurus-frontend1:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: team-taurus-frontend1
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
